<?xml version="1.0"?>
<package>
  <name>mdr_sound_monitor</name>
  <version>0.1.0</version>
  <description>
      Node to diagnose some components through sounds
  </description>

  <author email="jose.mayoral@smail.inf.h-brs.de">Jose Mayoral</author>
  <maintainer email="jose.mayoral@smail.inf.h-brs.de">Jose Mayoral</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>

  <test_depend>roslaunch</test_depend>
</package>
